--- a/releng/org.springsource.sts.site.limited/pom.xml
+++ b/releng/org.springsource.sts.site.limited/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springsource.sts</groupId>
@@ -8,85 +7,68 @@
 		<version>3.9.19-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
+
 	<artifactId>org.springsource.sts.site.limited</artifactId>
 	<packaging>eclipse-update-site</packaging>
 	<name>SpringSource Tool Suite</name>
+
 	<properties>
-	  <dist.accessKey>${accessKey}</dist.accessKey>
-	  <dist.secretKey>${secretKey}</dist.secretKey>
-	  <dist.target>sts</dist.target>
+		<dist.target>sts</dist.target>
 	</properties>
-  <repositories>
-	<repository>
-	  <id>sts</id>
-	  <layout>p2</layout>
-	  <url>https://dist.springsource.com/snapshot/STS/nightly/e3.6/</url>
-	</repository>
-  </repositories>
-  <build>
-	<plugins>
-	  <plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>properties-maven-plugin</artifactId>
-		<version>1.0-alpha-2</version>
-		<executions>
-		  <execution>
-			<phase>initialize</phase>
-			<goals>
-			  <goal>read-project-properties</goal>
-			</goals>
-			<configuration>
-			  <quiet>true</quiet>
-			  <files>
-				<file>${dist.properties}</file>
-			  </files>
-			</configuration>
-		  </execution>
-		</executions>
-	  </plugin>
-	  <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-antrun-plugin</artifactId>
-		<version>1.7</version>
-		<executions>
-		  <execution>
-			<id>process-update-site</id>
-			<phase>install</phase>
-			<configuration>
-			  <target>
-				<ant antfile="../../common/build.xml" target="process-update-site">
-				  <property name="p2.sign" value="${p2.sign}"/>
-				  <property name="p2.repository.name" value="${p2.repository.name}"/>
-				</ant>
-			  </target>
-			</configuration>
-			<goals>
-			  <goal>run</goal>
-			</goals>
-		  </execution>
-		  <execution>
-			<id>upload-dist</id>
-			<phase>deploy</phase>
-			<configuration>
-			  <target>
-				<property name="dist.full.version" value="${unqualifiedVersion}.${buildQualifier}"/>
-				<ant antfile="../../common/build.xml" target="deploy">
-				  <property name="dist.project" value="${dist.project}"/>
-				  <property name="dist.platform.version" value="${dist.platform.version}"/>
-				  <property name="dist.type" value="${dist.type}"/>
-				  <property name="dist.key" value="${dist.key}"/>
-				  <property name="dist.project" value="${dist.project}"/>
-				  <property name="dist.target" value="${dist.target}"/>
-				  <property name="plugin_classpath" refid="maven.plugin.classpath"/>
-				</ant>
-			  </target>
-			</configuration>
-			<goals>
-			  <goal>run</goal>
-			</goals>
-		  </execution>
-		</executions>
-	  </plugin>  
-	</plugins>
-  </build>
+
+	<repositories>
+		<repository>
+			<id>sts</id>
+			<layout>p2</layout>
+			<url>https://dist.springsource.com/snapshot/STS/nightly/e3.6/</url>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>process-update-site</id>
+						<phase>install</phase>
+						<configuration>
+							<target>
+								<ant antfile="../../common/build.xml" target="process-update-site">
+									<property name="p2.sign" value="${p2.sign}" />
+									<property name="p2.repository.name" value="${p2.repository.name}" />
+								</ant>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>upload-dist</id>
+						<phase>deploy</phase>
+						<configuration>
+							<target>
+								<property name="dist.full.version" value="${unqualifiedVersion}.${buildQualifier}" />
+								<ant antfile="../../common/build.xml" target="deploy">
+									<property name="dist.project" value="${dist.project}" />
+									<property name="dist.platform.version" value="${dist.platform.version}" />
+									<property name="dist.type" value="${dist.type}" />
+									<property name="dist.key" value="${dist.key}" />
+									<property name="dist.project" value="${dist.project}" />
+									<property name="dist.target" value="${dist.target}" />
+									<property name="plugin_classpath" refid="maven.plugin.classpath" />
+								</ant>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
